fixed alignment

--- a/css/index.css
+++ b/css/index.css
@@ -324,3 +324,8 @@ img {
   display: flex;
   justify-content: center;
 }
+
+.align-items {
+  display: flex;
+  align-items: center;
+}
