--- a/dns/_layout.scss
+++ b/dns/_layout.scss
@@ -10,3 +10,8 @@
     display: flex; 
     justify-content: center;
 }
+
+.align-items { 
+    display: flex;
+    align-items: center;
+}
